# VBMicrolensing

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  changelog.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/scripts/: conda_recipe_sync_from_pypi.py  prefetch_cibuildwheel_virtualenv.py
.github/workflows/: build_wheels.yml  publish_pypi_release.yml  test_conda_recipe.yml
VBMicrolensing/: __init__.py
VBMicrolensing/lib/: VBBinaryMag.cpp  VBESPL.cpp  VBLightCurves.cpp  VBLimbDarkening.cpp  VBMicrolensing.cpp  VBMicrolensingLibrary.cpp  VBMicrolensingLibrary.h  VBMultiMag.cpp  VBSkowronGould.cpp  VBclasses.cpp  VBparallaxcaustics.cpp  VBpolynomials.cpp  python_bindings.cpp
conda/: MAINTAINING_PACKAGES.md  README.md
docs/: desktop.ini
docs/C++/: AccuracyControl.md  AdvancedControl.md  BinaryLenses.md  BinaryLensesWithShear.md  BinarySources.md  CentroidTrajectories.md  CriticalCurvesAndCaustics.md  LightCurves.md  LimbDarkening.md  MultipleLenses.md  OrbitalMotion.md  Parallax.md  SingleLenses.md  desktop.ini  readme.md
docs/c++/: AccuracyControl.md  AdvancedControl.md  BinaryLenses.md  BinarySources.md  CriticalCurvesAndCaustics.md  LightCurves.md  LimbDarkening.md  OrbitalMotion.md  Parallax.md  SingleLenses.md  readme.md
docs/python/: AccuracyControl.md  AdvancedControl.md  BinaryLenses.md  BinaryLensesWithShear.md  BinarySources.md  CentroidTrajectories.md  CriticalCurvesAndCaustics.md  LightCurves.md  LimbDarkening.md  MultipleLenses.md  MutipleLenses.md  OrbitalMotion.md  Parallax.md  PolynomialRoos.md  PolynomialRoots.md  SingleLenses.md  readme.md
examples/cpp_examples/: Microlensing.cpp
examples/python_examples/: Check_literature_systems.ipynb  Literature_systems.ipynb  Litterature_systems.ipynb  Multiple_lens.ipynb  Triple_lens.ipynb  binary_lens.ipynb
