[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "VBMicrolensing"
description = "VBMicrolensing is a tool for efficient computation in gravitational microlensing events using the advanced contour integration method, supporting single, binary and multiple lenses."
version = "4.1.0"
keywords = ['Microlsening magnification and astrometry']

license = { text = "GPL-3.0" }
requires-python = ">=3.6,<4"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"VBMicrolensing.data" = ["data/*"]
